# structs/handlers/warehouse.go
@@ -1,5 +1,10 @@
 package handlers
 
+// WarehouseUsers
+//
+// # elemento de respuesta de warehouse users
+//
+// swagger:model WarehouseUsers
 type WarehouseUsers struct {
 	Pkr            int    `json:"pkr"`
 	Crd            int    `json:"crd"`
