# swagger2.yml
@@ -1,135 +1,117 @@
-openapi: 3.1.0
+consumes:
+- application/json
+definitions:
+  Driver:
+    description: '# Elementos de un driver'
+    properties:
+      dni:
+        type: string
+        x-go-name: Dni
+      name:
+        type: string
+        x-go-name: Name
+      phoneNumber:
+        type: string
+        x-go-name: PhoneNumber
+    title: Driver
+    type: object
+    x-go-package: support-utils/structs/handlers
+  DriverResponse:
+    description: '# elemento de respuesta de drivers'
+    properties:
+      dni:
+        type: string
+        x-go-name: Dni
+      name:
+        type: string
+        x-go-name: Name
+      password:
+        type: string
+        x-go-name: Password
+      phonenumber:
+        type: string
+        x-go-name: Phone
+      username:
+        type: string
+        x-go-name: Username
+    title: DriverResponse
+    type: object
+    x-go-package: support-utils/structs/responses
+  DriverResponseArray:
+    description: '# Array de drivers de respuesta'
+    properties:
+      drivers:
+        items:
+          $ref: '#/definitions/DriverResponse'
+        type: array
+        x-go-name: DResponse
+    title: ADriverResponse
+    type: object
+    x-go-name: ADriverResponse
+    x-go-package: support-utils/structs/responses
+  WarehouseUsers:
+    description: '# elemento de respuesta de warehouse users'
+    properties:
+      adm:
+        format: int64
+        type: integer
+        x-go-name: Adm
+      crd:
+        format: int64
+        type: integer
+        x-go-name: Crd
+      phone:
+        type: string
+        x-go-name: WarehousePhone
+      pkr:
+        format: int64
+        type: integer
+        x-go-name: Pkr
+    title: WarehouseUsers
+    type: object
+    x-go-package: support-utils/structs/handlers
 info:
-  title: Support Utils
-  version: 1.0.11
-servers:
-  - url: http://127.0.0.1:8080
-tags:
-  - name: drivers
-  - name: users
+  description: API Con las funcionalidades del equipo de soporte
+  title: Support-utils.
 paths:
-  /driver{warehouseCode}:
-    post:
-      tags:
-        - drivers
-      summary: Add a new driver to the warehouse
-      description: Add a new driver to the warehouse
-      parameters:
-        - name: warehouseCode
-          in: path
-          description: ID warehouse
-          required: true
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        description: Create a new pet in the store
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Drivers'
-        required: true
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DriverResponseArray'
-        '404':
-          description: Invalid
-  /acl{warehouseCode}:
+  /acl/{warehouseCode}:
     put:
-      tags:
-        - users
-      summary: Add new users to warehouse
-      description: Add new users to warehouse
+      description: '# Obtiene una frase aleatoria'
+      operationId: DriverPost
       parameters:
-        - name: warehouseCode
-          in: path
-          description: ID warehouse
-          required: true
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        description: Create a new pet in the store
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AclUsers'
-        required: true
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AclResponse'
-        '404':
-          description: Invalid input
-components:
-  schemas:
-    Drivers:
-      type: object
-      properties:
-        drivers:
-          type: array
+      - in: body
+        name: drivers
+        schema:
           items:
-            $ref: '#/components/schemas/Driver'
-    Driver:
-      type: object
-      properties:
-        name:
-          type: string
-          example: pepe
-        dni:
-          type: string
-          example: 12345678Z
-        phoneNumber:
-          type: string
-          example: '666777888'
-    DriverResponseArray:
-      type: array
-      items:
-        $ref: '#/components/schemas/DriverResponse'
-    DriverResponse:
-      type: object
-      properties:
-        name:
-          type: string
-          example: pepe
-        dni:
-          type: string
-          example: 12345678Z
-        phonenumber:
-          type: string
-          example: '666777888'
-        username:
-          type: string
-          example: Z2345678
-        password:
-          type: string
-          example:
-    AclUsers:
-      type: object
-      properties:
-        pkr:
-          type: integer
-          example: 5
-        crd:
-          type: integer
-          example: 3
-        adm:
-          type: integer
-          example: 1
-        phone:
-          type: string
-          example: '666777888'
-    AclResponse:
-      type: string
-      example: usuarios dados de alta
-    api_key:
-      type: apiKey
-      name: api_key
-      in: header
+            $ref: '#/definitions/Driver'
+          type: array
+        x-go-name: DriverA
+      responses:
+        "200":
+          description: WarehouseUsers
+          schema:
+            items:
+              $ref: '#/definitions/WarehouseUsers'
+            type: array
+  /driver/{warehouseCode}:
+    post:
+      description: '# Obtiene una frase aleatoria'
+      operationId: DriverPost
+      parameters:
+      - in: body
+        name: drivers
+        schema:
+          items:
+            $ref: '#/definitions/Driver'
+          type: array
+        x-go-name: DriverA
+      responses:
+        "200":
+          description: WarehouseUsers
+          schema:
+            items:
+              $ref: '#/definitions/WarehouseUsers'
+            type: array
+produces:
+- application/json
+swagger: "2.0"
